--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "citizen-hero",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "18.x"
+  },
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
