--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
+    "cors": "^2.8.5",
     "heroku": "^7.60.2",
     "node-sass": "^7.0.1",
     "react": "^18.1.0",
