--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "node-sass": "^7.0.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-image-fallback": "^8.0.0",
+    "react-lazy-load-image-component": "^1.5.5",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
